--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         <button id="/login" class="btn">Acceder</button>
         <button id="/signup" class="btn">Registrarse</button>
         <button id="/postea" class="btn">Postea</button>
+        <button id="/perfil" class="btn">Mi Pefil</button>
         <button id="/amigos" class="btn">Amigos</button>
         <button id="/blog" class="btn">Blog</button>
+
     </nav>
 </header>
 
